tests/compilation_tests/02_fail_type_mismatch.stderr
error[E0308]: mismatched types
 --> tests/compilation_tests/02_fail_type_mismatch.rs:7:19
  |
7 |     MyTensor::set(2i32, 2i64);
  |     ------------- ^^^^ expected `i64`, found `i32`
  |     |
  |     arguments to this function are incorrect
  |
note: associated function defined here
 --> tests/compilation_tests/02_fail_type_mismatch.rs:3:1
  |
3 | tensor_type!(MyTensor, [i64, i64], tch::Kind::Float);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)
help: change the type of the numeric literal from `i32` to `i64`
  |
7 |     MyTensor::set(2i64, 2i64);
  |                    ~~~
